--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Install backend dependencies
         run: |
-          cd quiz_backup/quiz-backend
+          cd quiz-backnd
           npm install
 
       - name: Run backend tests
         run: |
-          cd quiz_backup/quiz-backend
+          cd quiz-backnd
           npm test
