--- a/quiz-backnd/package.json
+++ b/quiz-backnd/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --watchAll --runInBand"
+    "test": "jest --runInBand"
+
   },
   "keywords": [],
   "author": "",
