--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,11 +26,9 @@ jobs:
           node-version: 20
 
       - name: Install backend dependencies
-        run: |
-          cd quiz-backnd
-          npm install
+        working-directory: quiz-backnd
+        run: npm install
 
       - name: Run backend tests
-        run: |
-          cd quiz-backnd
-          npx jest --runInBand
+        working-directory: quiz-backnd
+        run: npx jest --runInBand
